@@ -1,14 +1,11 @@
 package geometries;
 
-import primitives.Vector;
-
-import java.util.Arrays;
-import java.util.List;
-
 import primitives.Point3D;
 import primitives.Ray;
-
+import primitives.Vector;
 import static primitives.Util.*;
+
+import java.util.List;
 
 /**
  * A class that represents a 2-dimensional plane in 3-dimensional coordinate system
@@ -73,11 +70,14 @@ public class Plane implements Geometry {
 
     @Override
     public List<Point3D> findIntersections(Ray r) {
-        Vector rayToPlane = p0.subtract(r.getStartPoint()); //a vector from the ray start point to some point on the plane
+        Vector rayToPlane;
+        try {
+            rayToPlane = p0.subtract(r.getStartPoint()); //a vector from the ray start point to some point on the plane
+        }
+        catch (IllegalArgumentException e) { return null; } //ray starts at plane's representative point
         double numerator = alignZero(normal.dotProduct(rayToPlane));
         double denominator = alignZero(normal.dotProduct(r.getDir()));
-        if (isZero(denominator)) return null;               //Ray is perpendicular to plane
-        if (isZero(numerator)) return null;                 //Ray starts on plane
-        return Arrays.asList(r.getPoint(numerator/denominator));
+        if (!isZero(denominator) && numerator/denominator > 0) return List.of(r.getPoint(numerator/denominator));
+        else return null; //Ray starts on plane, is perpendicular to plane, or is behind the plane
     }
 }
